skill_validator/tests/snapshots/integration_test__flat_layout.snap
---
source: tests/integration_test.rs
assertion_line: 80
expression: snapshot_report(&report)
---
error[skill_flat_layout]: skills/flat-skill/SKILL.md:1: skills/flat-skill/SKILL.md is at depth 2, minimum is 3. Skills must be nested: skills/<folder>/.../<skill-name>/SKILL.md

Ran 1 lints: 1 errors, 0 warnings
