skill_validator/tests/snapshots/integration_test__missing_description.snap
---
source: tests/integration_test.rs
assertion_line: 71
expression: snapshot_report(&report)
---
error[skill_missing_description]: skills/test/no-desc/SKILL.md:1: skills/test/no-desc/SKILL.md frontmatter is missing required field: description

Ran 1 lints: 1 errors, 0 warnings
