skill_validator/tests/snapshots/integration_test__missing_examples.snap
---
source: tests/integration_test.rs
assertion_line: 145
expression: snapshot_report(&report)
---
warning[skill_missing_examples_section]: skills/test/no-examples/SKILL.md:1: skills/test/no-examples/SKILL.md has no '## Examples' section

Ran 1 lints: 0 errors, 1 warnings
