skill_validator/tests/snapshots/integration_test__missing_frontmatter.snap
---
source: tests/integration_test.rs
assertion_line: 87
expression: snapshot_report(&report)
---
error[skill_missing_frontmatter]: skills/test/no-frontmatter/SKILL.md:1: skills/test/no-frontmatter/SKILL.md has no YAML frontmatter

Ran 1 lints: 1 errors, 0 warnings
