skill_validator/tests/snapshots/integration_test__missing_guidelines.snap
---
source: tests/integration_test.rs
assertion_line: 153
expression: snapshot_report(&report)
---
warning[skill_missing_guidelines_section]: skills/test/no-guidelines/SKILL.md:1: skills/test/no-guidelines/SKILL.md has no '## Guidelines' section

Ran 1 lints: 0 errors, 1 warnings
