skill_validator/tests/snapshots/integration_test__mixed_languages.snap
---
source: tests/integration_test.rs
assertion_line: 103
expression: snapshot_report(&report)
---
error[skill_mixed_script_languages]: skills/test/mixed-langs/SKILL.md:1: skills/test/mixed-langs/scripts contains multiple script languages: [py, sh]

Ran 1 lints: 1 errors, 0 warnings
