skill_validator/tests/snapshots/integration_test__name_consecutive_hyphens.snap
---
source: tests/integration_test.rs
expression: snapshot_report(&report)
---
error[skill_name_consecutive_hyphens]: skills/test/bad--name/SKILL.md:2: skills/test/bad--name/SKILL.md has name 'test-bad--name' containing consecutive hyphens

Ran 1 lints: 1 errors, 0 warnings
